# web-app-dockerized

./: Dockerfile  README.md  pyproject.toml  ruff.toml
src/webapp/: app.py
