[project]
name = "webapp"
version = "0.1.0"
description = "python web app dockerized"
authors = [
    {name = "Frank Herrmannsdoerfer",email = "fherrmannsdoerfer@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
